Minor syntactic changes